@@ -61,7 +61,7 @@ public class PWScale extends PWWidget {
 		scale.addListener(SWT.Modify, new Listener() {
 			@Override
 			public void handleEvent(final Event event) {
-				PreferenceWindow.getInstance().setValue(getPropertyKey(), new Integer(scale.getSelection()));
+				PreferenceWindow.getInstance().setValue(getPropertyKey(), Integer.valueOf(scale.getSelection()));
 			}
 		});
 
@@ -75,7 +75,7 @@ public class PWScale extends PWWidget {
 	public void check() {
 		final Object value = PreferenceWindow.getInstance().getValueFor(getPropertyKey());
 		if (value == null) {
-			PreferenceWindow.getInstance().setValue(getPropertyKey(), new Integer(this.min));
+			PreferenceWindow.getInstance().setValue(getPropertyKey(), Integer.valueOf(this.min));
 		} else {
 			if (!(value instanceof Integer)) {
 				throw new UnsupportedOperationException("The property '" + getPropertyKey() + "' has to be an Integer because it is associated to a iscale");
